[package]
name = "thai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = "0.3.2"
candle-examples = "0.3.2"
candle-transformers = "0.3.2"
futures-util = "0.3.30"
kalosm-sound = "0.1.0"
rand = "0.8.5"
rodio = "0.17.3"
rwhisper = "0.1.2"
tokio = "1.35.1"

[[bin]]
name = "thai"
path = "main.rs"
