[package]
name = "thai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
glib-macros = "0.18.5"
gtk = "0.18.1"
pango = "0.18.3"
rand = "0.8.5"
rodio = "0.17.3"


[[bin]]
name = "thai"
path = "main.rs"
